# satonomics

./: .gitignore  README.md
parser/: .gitignore  Cargo.toml  README.md  run.sh  samply.sh
parser/src/: lib.rs  main.rs
parser/src/actions/: export.rs  export_all.rs  iter_blocks.rs  min_height.rs  mod.rs  parse.rs  parse_block.rs
parser/src/bitcoin/: consts.rs  converters.rs  daemon.rs
parser/src/databases/: _database.rs  _database2.rs  _trait.rs  address_index_to_address_data.rs  address_index_to_empty_address_data.rs  address_to_address_index.rs  metadata.rs  mod.rs  tx_index_to_tx_data.rs  txid_to_tx_data.rs  txid_to_tx_index.rs  txout_index_to_address_index.rs  txout_index_to_amount.rs  txout_index_to_sats.rs
parser/src/datasets/: block_metadata.rs  coindays.rs  cointime.rs  constant.rs  date_metadata.rs  mining.rs  mod.rs  transaction.rs
parser/src/io/: serialization.rs
parser/src/parse/: bi_map.rs  block_path.rs  database.rs  date_map.rs  height_map.rs  mod.rs  sparsed_vec.rs  txout_index.rs
parser/src/price/: binance.rs  kraken.rs
parser/src/states/: address_index_to_address_data.rs  counters.rs  date_data_vec.rs  mod.rs  tx_index_to_tx_data.rs  txout_index_to_address_index.rs  txout_index_to_sats.rs
parser/src/structs/: address.rs  address_data.rs  address_realized_data.rs  address_size.rs  address_split.rs  address_type.rs  bi_map.rs  block_data.rs  block_path.rs  counter.rs  database.rs  date_data.rs  date_map.rs  empty_address_data.rs  height_map.rs  liquidity.rs  map_value.rs  mod.rs  partial_txout_data.rs  price.rs  tx_data.rs  wamount.rs  (+1 more)
(+384 files in other folders)
