[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "vec"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-delegate = "0.1.2"
bitcoin = { version = "0.31.2", features = ["serde"] }
bitcoin_hashes = { version = "0.14.0" }
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
db-key = "=0.0.5"
derive_deref = "1.1.1"
divan = "0.1.14"
fastrand = "2.1.0"
itertools = "0.12.1"
leveldb = "0.8.6"
memory-stats = "1.1.0"
nohash = "0.2.0"
ordered-float = "4.2.0"
par-iter-sync = "0.1.11"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
sanakirja = "1.4.2"
savefile = "0.16.5"
savefile-derive = "0.16.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
